# xml_named_entity_miner

./: .Doxygen  .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  COPYING  ClangOverrides.txt  README.md  cmake_invocation.sh  main.cpp  prep_tests.sh  sample.qrc  tags
cmake/Modules/: gtest.cmake
gui/: element_selections.cpp  element_selections.hpp  entity_tree.cpp  entity_tree.hpp  line_edit.cpp  line_edit.hpp  mainwindow.cpp  mainwindow.hpp  ontology.cpp  ontology.hpp  ontology_dialog.cpp  ontology_dialog.hpp  ontology_view.cpp  ontology_view.hpp  stacked_text_display.cpp  text_display.cpp  text_display_highlighter.hpp  txt_selection_display.cpp  txt_selection_display.hpp  xml_display.cpp  xml_display.hpp  xml_file_outline.cpp  xml_file_outline.hpp  xml_highlighter.cpp  xml_highlighter.hpp  xml_task_dialog.cpp  xml_task_dialog.hpp  xml_tree.cpp  xml_tree.hpp  xpath_query_widget.cpp  xpath_query_widget.hpp
gui2/: CMakeLists.txt  add_ontology_dialog.cpp  add_ontology_dialog.hpp  line_edit.cpp  line_edit.hpp  mainwindow.cpp  mainwindow.hpp  ontology_view.cpp  ontology_view.hpp  ontology_view_context_menu.cpp  ontology_view_context_menu.hpp  stacked_text_display.cpp  stacked_text_display.hpp  tabbed_ontology_view.cpp  tabbed_ontology_view.hpp  text_display.cpp  text_display.hpp  text_display_highlighter.cpp  text_display_highlighter.hpp  thesaurus.cpp  xml_display.cpp  xml_display.hpp  xml_display_highlighter.cpp  xml_display_highlighter.hpp  xml_file_explorer.cpp  xml_file_explorer.hpp  xml_file_outline.cpp  xml_file_outline.hpp  xml_schema_dialog.cpp  xml_schema_dialog.hpp  xml_task_dialog.cpp  xml_task_dialog.hpp  xpath_query_widget.cpp  xpath_query_widget.hpp  xslt_dialog.cpp  xslt_dialog.hpp
gui2/icons/: xml_named_entity_miner.qrc
lib/: CMakeLists.txt  bilanz.hpp  dictionary.cpp  dictionary.hpp  dir.cpp  dir.hpp  interface_error_handler.hpp  libxml2_error_handlers.cpp  libxml2_error_handlers.hpp  pathname.cpp  pathname.hpp  singleton.hpp  standard_error_handler.cpp  standard_error_handler.hpp  synonyms.cpp  synonyms.hpp  thesaurus.hpp  utils.cpp  utils.hpp  xml_attribute.cpp  xml_attribute.hpp  xml_comment_node.hpp  xml_doc.cpp  xml_doc.hpp  xml_doc_resource.hpp  xml_element.cpp  xml_element.hpp  xml_exception.hpp  xml_node.cpp  xml_node.hpp  xml_parser_ctxt.hpp  xml_schema.hpp  xml_schema_parser.cpp  xml_schema_parser.hpp  xml_schema_validator.hpp  xml_string.hpp  xpath_ctxt.cpp  xpath_ctxt.hpp  xpath_expression.hpp  xpath_query.cpp  (+5 more)
lib/tests/: CMakeLists.txt  global_env.hpp  gtest_main.cpp  synonyms_test.cpp  test_helper.cpp  test_helper.hpp  utils_test.cpp  xml_doc_test.cpp  xml_element_test.cpp  xml_schema_parser_test.cpp  xml_schema_test.cpp  xml_schema_validator_test.cpp  xpath_ctxt_test.cpp  xpath_query_test.cpp  xpath_result_set_test.cpp  xslt_doc_test.cpp
tests/: CMakeLists.txt  dir_test.cpp  gtest_main.cpp  logging_env.hpp  pathname_test.cpp  qregexp_test.cpp  synonyms_test.cpp  test_helper.cpp  test_helper.hpp  xml_doc_test.cpp  xml_element_test.cpp  xpath_ctxt_test.cpp  xpath_query_test.cpp  xpath_result_set_test.cpp  xslt_doc_test.cpp
